<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">COSC341Project</string>

    <string name="title">The OK Wine Experience</string>
    <string name="hint">Search for a Winery by Name</string>
    <string name="compare">⇄ Compare Tours</string>
    <string name="book">🗒 Book A Tour</string>
    <string name="home">Home</string>
    <string name="myTours">My Tours</string>
    <string name="profile">Profile</string>

    <string name="title_activity_mission_hill">MissionHillActivity</string>

    <string name="WineryName">Winery Name</string>
    <string name="Image">Image</string>
    <string name="Images">Images</string>
    <string name="WineryDetails">Details:</string>
    <string name="WineryDetailsParagraph">Here users can find details about the winery. There may be details about how the winery started, how long it has been operating, or the winery mission statement (etc.). </string>
    <string name="WineryAwards">Awards 🏆:</string>
    <string name="WineryAwardsParagraph">Here users can see a list of awards that the winery has acquired.
        \n Best Wine of 2019
        \n Award for Flavour, 2014</string>
    <string name="AvailableTours">Available Tours</string>
    <string name="A_Tour">Details about tour A</string>
    <string name="B_Tour">Details about tour B</string>
    <string name="C_Tour">Details about tour C</string>
    <string name="D_Tour">Details about tour D</string>
    <string name="E_Tour">Details about tour E</string>
    <string name="TourInfoButton">ⓘ More Info</string>
    <string name="ContactWinery">Winery Contact Info</string>
    <string name="Facebook">Visit FaceBook</string>
    <string name="X">Visit X</string>
    <string name="Instagram">Visit Instagram</string>
    <string name="LocationHeader">Location</string>
    <string name="Location">1234 Wine Rd
        \n Kelowna, BC</string>

    <string name="TourDetails">Tour Details</string>
    <string name="TourDetailsParagraph">Lots and lots of detail on this tour option. What type of wines will be tasted, what you will see/do, etc.</string>
    <string name="BackToWineryInfoPage">Back To the Winery Page</string>

    <!-- My Tours Screen -->
    <string name="your_tours_title">Your Tours</string>
    <string name="tab_upcoming">Upcoming Tours</string>
    <string name="tab_past">Past Tours</string>
    <string name="empty_upcoming">You have no tours booked yet</string>
    <string name="empty_past">You have no past tours yet</string>

    <!-- Leave Review Screen -->
    <string name="leave_review_for">Leave a Review for %1$s:</string>
    <string name="review_hint">Type your review here...</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="review_confirmation">Your review of %1$s was submitted</string>
    <string name="ok_button">OK</string>

    <!-- Addresses of wineries -->
    <string-array name="okanagan_wineries">
        <!-- Kelowna -->
        <item>1730 Mission Hill Rd, West Kelowna, BC</item>
        <item>3303 Boucherie Rd, West Kelowna, BC</item>
        <item>2550 Boucherie Rd, West Kelowna, BC</item>
        <item>5445 Lakeshore Rd, Kelowna, BC</item>
        <item>4870 Chute Lake Rd, Kelowna, BC</item>
        <item>3240 Pooley Rd, Kelowna, BC</item>
        <item>2555 Saucier Rd, Kelowna, BC</item>
        <item>1875 Country Club Dr, Kelowna, BC</item>
        <item>1465 Sumas Rd, Kelowna, BC</item>
        <item>1125 Richter St, Kelowna, BC</item>
        <item>2550 Acland Rd, Kelowna, BC</item>
        <item>3125 Boucherie Rd, West Kelowna, BC</item>
        <item>8225 Gillard Forest Service Rd, Kelowna, BC</item>
        <item>4444G Houghton Rd, Kelowna, BC</item>

        <!-- Lake Country -->
        <item>15686 Commonage Rd, Lake Country, BC</item>
        <item>2291 Goldie Rd, Lake Country, BC</item>
        <item>1055 Camp Rd, Lake Country, BC</item>
        <item>273 Chadwell Pl, Lake Country, BC</item>

        <!-- Summerland -->
        <item>18404 Bathville Rd, Summerland, BC</item>
        <item>14014 Gartrell Rd, Summerland, BC</item>
        <item>17388 Hwy 97, Summerland, BC</item>
        <item>9384 Hwy 97, Summerland, BC</item>
        <item>18404 Bathville Rd, Summerland, BC</item>

        <!-- Penticton -->
        <item>1480 McMillan Ave, Penticton, BC</item>
        <item>1450 Naramata Rd, Penticton, BC</item>
        <item>3623 1st Ave, Naramata, BC</item>
        <item>1465 Naramata Rd, Penticton, BC</item>
        <item>799 Ponderosa Rd, Penticton, BC</item>

        <!-- Naramata Bench -->
        <item>3623 1st St, Naramata, BC</item>
        <item>1445 Naramata Rd, Naramata, BC</item>
        <item>1356 Naramata Rd, Naramata, BC</item>
        <item>899 Naramata Rd, Naramata, BC</item>
        <item>1315 Taylor Pl, Naramata, BC</item>

        <!-- Okanagan Falls -->
        <item>1163 Maple St, Okanagan Falls, BC</item>
        <item>2145 Sun Valley Way, Okanagan Falls, BC</item>
        <item>1040 Boucherie Rd, Okanagan Falls, BC</item>

        <!-- Oliver -->
        <item>500 Burrowing Owl Pl, Oliver, BC</item>
        <item>7857 Tucelnuit Dr, Oliver, BC</item>
        <item>5500 Hwy 97, Oliver, BC</item>
        <item>100 Enterprise Way, Oliver, BC</item>
        <item>8780 Hwy 97, Oliver, BC</item>
        <item>5816 Ryegrass Rd, Oliver, BC</item>
        <item>36264 97th St, Oliver, BC</item>

        <!-- Osoyoos -->
        <item>1400 Rancher Creek Rd, Osoyoos, BC</item>
        <item>16091 87th St, Osoyoos, BC</item>
        <item>1222 Rancher Creek Rd, Osoyoos, BC</item>
        <item>100 Harbour Key Dr, Osoyoos, BC</item>
        <item>200 Rancher Creek Rd, Osoyoos, BC</item>

        <!-- Additional Addresses -->
        <item>250 Upper Bench Rd S, Penticton, BC</item>
        <item>400 Smythe Dr, Naramata, BC</item>
        <item>101 Martin St, Penticton, BC</item>
        <item>2270 Garner Rd, Kelowna, BC</item>
        <item>1187 KLO Rd, Kelowna, BC</item>
        <item>1250 McKinley Beach Dr, Kelowna, BC</item>
        <item>3230 Highway 3, Keremeos, BC</item>
        <item>147 Lynch Rd, Keremeos, BC</item>
    </string-array>

</resources>