<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WineryInfoActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".WineryInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/WineryNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/WineryName"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/WineryImageView"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:contentDescription="@string/Image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WineryNameTextView"
            app:srcCompat="@drawable/img_placeholder" />

        <TextView
            android:id="@+id/WineryDetailsHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/WineryDetails"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WineryImageView" />

        <TextView
            android:id="@+id/WineryDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WineryDetailsParagraph"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WineryDetailsHeaderTextView" />

        <TextView
            android:id="@+id/WineryAwardsHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/WineryAwards"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WineryDetailsTextView" />

        <TextView
            android:id="@+id/WineryAwardsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WineryAwardsParagraph"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WineryAwardsHeaderTextView" />

        <TextView
            android:id="@+id/WineryAvailableToursTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/AvailableTours"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WineryAwardsTextView" />

        <HorizontalScrollView
            android:id="@+id/TourScrollView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WineryAvailableToursTextView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/A_TourImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/Image"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/img_a" />

                    <TextView
                        android:id="@+id/A_TourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/A_Tour"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/A_TourButton"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:text="@string/TourInfoButton" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/B_TourImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/Image"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/img_b" />

                    <TextView
                        android:id="@+id/B_TourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/B_Tour"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/B_TourButton"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:text="@string/TourInfoButton" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/C_TourImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/Image"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/img_c" />

                    <TextView
                        android:id="@+id/C_TourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/C_Tour"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/C_TourButton"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:text="@string/TourInfoButton" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/D_TourImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/Image"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/img_d" />

                    <TextView
                        android:id="@+id/D_TourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/D_Tour"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/D_TourButton"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:text="@string/TourInfoButton" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/E_TourImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/Image"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/img_e" />

                    <TextView
                        android:id="@+id/E_TourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/E_Tour"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/E_TourButton"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:text="@string/TourInfoButton" />

                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>


        <TextView
            android:id="@+id/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/ContactWinery"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TourScrollView" />


        <ImageButton
            android:id="@+id/FacebookButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/Facebook"
            android:scaleType="centerInside"
            android:src="@drawable/img_facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ContactTextView" />

        <ImageButton
            android:id="@+id/InstagramButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/Instagram"
            android:scaleType="centerInside"
            android:src="@drawable/img_instagram"
            app:layout_constraintEnd_toStartOf="@+id/XButton"
            app:layout_constraintStart_toEndOf="@+id/FacebookButton"
            app:layout_constraintTop_toBottomOf="@+id/ContactTextView" />

        <ImageButton
            android:id="@+id/XButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="100dp"
            android:contentDescription="@string/X"
            android:scaleType="centerInside"
            android:src="@drawable/img_x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ContactTextView" />

        <TextView
            android:id="@+id/LocationHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/LocationHeader"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InstagramButton" />

        <TextView
            android:id="@+id/LocationTextView"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/Location"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LocationHeaderTextView" />

        <ImageView
            android:id="@+id/MapImageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/Image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/LocationTextView"
            app:layout_constraintTop_toBottomOf="@+id/LocationHeaderTextView"
            app:srcCompat="@drawable/img_map" />

        <TextView
            android:id="@+id/ImageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/Images"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MapImageView" />

        <HorizontalScrollView
            android:id="@+id/ImageScrollView"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImageTextView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/WineImageView1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/Image"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/img_wine1" />

                <ImageView
                    android:id="@+id/WineImageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/Image"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/img_wine2" />

                <ImageView
                    android:id="@+id/WineImageView3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/Image"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/img_wine3" />

                <ImageView
                    android:id="@+id/WineImageView4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/Image"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/img_wine4" />

            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/BookTourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImageScrollView" />

        <!-- Spacer View -->
        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/BookTourButton"/> <!-- Adjust height as needed -->


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="#D3D3D3"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/SearchHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SearchMyToursButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myTours"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ProfileButton"
        app:layout_constraintStart_toEndOf="@+id/SearchHomeButton" />

    <Button
        android:id="@+id/ProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
